--- a/Prode/frontend/prode-app/fasefinal2.html
+++ b/Prode/frontend/prode-app/fasefinal2.html
@@ -28,13 +28,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h2 class="tituloj1" style="color: rgb(255, 57, 57)"> Octavos de Final</h2>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <h2 class="tituloj1" style="color: rgb(0, 0, 0)"> Octavos de Final</h2>
+                    <table class="table table-dark table-striped"  style="width: 450px">
                         <thead>
                             <tr>
-                                <th scope="col">Equipo local</th>
-                                <th scope="col">Resultado</th>
-                                <th scope="col">Equipo visitante</th>
+                                <th scope="col">Local</th>
+                                <th > Resultado</th>
+                                <th scope="col">Visitante</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -43,26 +43,26 @@
                                     <figure>
                                         <span>1ºA</span>
                                         <img src=""
-                                        alt="1ºA" >
+                                        alt="" style="width : 40px" >
                                     </figure>
                                 </td>
-                                <td>
-                                    <input type="number" id="goles_equipo_local_P49" style="width : 30px">
+                                <td align="center">
+                                    <input type="number" id="goles_equipo_local_P49" style="width : 45px">
                                     <span class="fecha">03/12</span> 
                                     <span  class="hora">12:00</span>
-                                    <input type="number" id="goles_equipo_visitante_P49" style="width : 30px">
+                                    <input type="number" id="goles_equipo_visitante_P49" style="width : 45px">
                                 </td>
                                 <td >
                                     <figure>
                                         <span>2ºB</span>
                                         <img src=""
-                                        alt="2ºB" >
+                                        alt=""  style="width : 40px">
                                     </figure>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped"  style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -76,26 +76,26 @@
                                     <figure>
                                         <span>1ºC</span>
                                         <img src=""
-                                        alt="1ºC" style="width : 80px">
+                                        alt="" style="width : 40px">
                                     </figure>
                                 </td>
                                 <td class="resultado">
-                                    <input type="number" id="goles_equipo_local_P50" style="width : 30px">
+                                    <input type="number" id="goles_equipo_local_P50" style="width : 45px">
                                     <span class="fecha">03/12</span> 
                                     <span class="hora">16:00</span>
-                                    <input type="number"id="goles_equipo_visitante_P50" style="width : 30px">
+                                    <input type="number"id="goles_equipo_visitante_P50" style="width : 45px">
                                 </td>
                                 <td class="visitante">
                                     <figure>
                                         <span class="equipo_t1042">2ºD</span>
                                         <img src=""
-                                        alt="2ºD" style="width : 80px">
+                                        alt="" style="width : 40px">
                                     </figure>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped" style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -109,26 +109,26 @@
                                     <figure>
                                         <span class="equipo_t1873">1°E</span>
                                         <img src=""
-                                        alt="1°E" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                                 <td class="resultado">
-                                    <input type="number" id="goles_equipo_local_P51" style="width : 30px">
+                                    <input type="number" id="goles_equipo_local_P51" style="width : 45px">
                                     <span class="fecha">05/12</span> 
                                     <span class="hora">12:00</span>
-                                    <input type="number" id="goles_equipo_visitante_P51" style="width : 30px">
+                                    <input type="number" id="goles_equipo_visitante_P51" style="width : 45px">
                                 </td>
                                 <td class="visitante">
                                     <figure>
                                         <span>2°F</span>
                                         <img src=""
-                                        alt="2°F" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped" style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -142,7 +142,7 @@
                                     <figure>
                                         <span class="equipo_t596">1°G</span>
                                         <img src=""
-                                        alt="1°G" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                                 <td class="resultado">
@@ -155,13 +155,13 @@
                                     <figure>
                                         <span>2ºH</span>
                                         <img src=""
-                                        alt="2ºH" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped" style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -175,7 +175,7 @@
                                     <figure>
                                         <span>1ºB</span>
                                         <img src=""
-                                        alt="1ºB" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                                 <td 
@@ -189,13 +189,13 @@
                                     <figure>
                                         <span>2ºA</span>
                                         <img src=""
-                                        alt="2ºA" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped" style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -209,7 +209,7 @@
                                     <figure>
                                         <span>1ºD</span>
                                         <img src=""
-                                        alt="1ºD" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                                 <td class="resultado">
@@ -222,13 +222,13 @@
                                     <figure>
                                     <span>2ºC</span>
                                     <img src=""
-                                    alt="2ºC" style="width : 80px">
+                                    alt="" style="width : 80px">
                                     </figure>
                                 </td>           
                             </tr>
                         </tbody>
                     </table>
-                    <table class="table table-dark table-striped" id="jornada1">
+                    <table class="table table-dark table-striped" style="width: 450px">
                         <thead>
                             <tr>
                                 <th scope="col">Equipo local</th>
@@ -242,7 +242,7 @@
                                     <figure>
                                         <span>1ºF</span>
                                         <img src=""
-                                        alt="1ºF" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                                 <td class="resultado">
@@ -255,7 +255,7 @@
                                     <figure>
                                         <span>2ºE</span>
                                         <img src=""
-                                        alt="2ºE" style="width : 80px">
+                                        alt="" style="width : 80px">
                                     </figure>
                                 </td>
                             </tr> 
@@ -263,7 +263,7 @@
                     </table>
                 </div>
                 <div class="col-sm">
-                    <h2 class="tituloj1" style="color: white" > Cuartos de Final</h2>
+                    <h2 class="tituloj1" style="color: rgb(0, 0, 0)" > Cuartos de Final</h2>
                     <table class="table table-dark table-striped"  style=" width: 420px;"   id="jornada1" 
                         summary="Todos los resultados de la jornada">
                         <thead>
@@ -400,10 +400,78 @@
                     </table>
                 </div>
                 <div class="col-sm">
-                    One of three columns
+                    <h2 class="tituloj1" style="color: rgb(0, 0, 0)"> Semifinal</h2>
+                    <table class="table table-dark table-striped"  style=" width: 420px;"  id="jornada1" 
+                        summary="Todos los resultados de la jornada">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td id="P61">
+                                    <figure>
+                                        <span>Senegal</span>
+                                        <img src=""
+                                        alt="Senegal" style="width : 80px">
+                                    </figure>
+                                </td>
+                                <td>
+                                    <input type="number" id="goles_equipo_local_P6"style="width : 30px">
+                                    <span class="fecha">13/12</span>
+                                    <span class="hora">16:00</span>
+                                    <input type="number" id="goles_equipo_visitante_P61" style="width : 30px">
+                                </td>
+                                <td>
+                                    <figure>
+                                        <span>Países Bajos</span>
+                                        <img src=""
+                                        alt="Países Bajos" style="width : 80px">
+                                    </figure>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-dark table-striped" id="jornada1">
+                        <thead>
+                            <tr>
+                                <th scope="col">Equipo local</th>
+                                <th scope="col">Resultado</th>
+                                <th scope="col">Equipo visitante</th>
+                            </tr>
+                        </thead>
+                        <tbody>        
+                            <tr>
+                                <td class="local" id="P62">
+                                    <figure>
+                                        <span class="equipo_t114">Inglaterra</span>
+                                        <img src=""
+                                        alt="Inglaterra" style="width : 80px">
+                                    </figure>
+                                </td>
+                                <td class="resultado">
+                                    <input type="number" id="goles_equipo_local_P62"style="width : 30px">
+                                    <span class="fecha">14/12</span> 
+                                    <span class="hora">16:00</span>
+                                    <input type="number"
+                                    id="goles_equipo_visitante_P62" style="width : 30px">
+                                </td>
+                                <td class="visitante">
+                                    <figure>
+                                        <span class="equipo_t1042">Irán</span>
+                                        <img src=""
+                                        alt="Irán" style="width : 80px">
+                                    </figure>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>    
                 </div>
                 <div class="col-sm">
-                    One of three columns
+                    SF+GHJMSPÑ+FGJSPFÑIGJSFP+ÑGJISFÑGM
                 </div>
             </div> <!--ROW-->
         </div><!--CONTAINER-->
